# ds2d

./: Cargo.toml  LICENSE-MIT  README.md
examples/: batch.rs  hello_world.rs  input.rs  input_keyboard.rs  input_mouse.rs  text.rs  texture.rs  triangle.rs
nix/: sources.json
src/: context.rs  graphics.rs  input.rs  lib.rs  timer.rs
src/context/: graphics.rs  keyboard.rs  mod.rs  mouse.rs  timer.rs  window.rs
src/graphics/: batch.rs  blend.rs  camera.rs  color.rs  context.rs  error.rs  mesh.rs  mod.rs  primitives.rs  rect.rs  sprite.rs  text.rs  texture.rs  transform.rs
src/input/: context.rs  mod.rs
src/timer/: context.rs  mod.rs
