[package]
name = "ds2d"
version = "0.1.0"
authors = ["The Author <the.author@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.6.0"
glutin = "0.25.1"
log = "0.4.11"
stderrlog = "0.5.0"
structopt = "0.3.20"
