[package]
name = "ds2d"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"
description = "A dead-simple 2D game library"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/fatho/ds2d#readme"
repository = "https://github.com/fatho/ds2d"

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.25.1"
log = "0.4.11"
gl = "0.14.0"
cgmath = { version = "0.17.0", features = ["swizzle"] }

[dev-dependencies]
stderrlog = "0.5.0"
structopt = "0.3.20"
